feat: introduced gitignore and stubs for two pallets

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,5 +1,5 @@
 [workspace]
-members = [ "node", "runtime", "pallets" ]
+members = [ "node", "runtime", "pallets/*" ]
 resolver = "2"
 
 [workspace.package]
